--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
     "react-rating-stars-component": "2.2.0",
+    "react-redux": "8.1.1",
     "react-router-dom": "5.3.0",
     "react-select": "4.3.1",
     "react-select-event": "5.3.0",
     "react-slick": "0.28.1",
     "reactjs-popup": "2.0.5",
     "reactjs-slick": "0.0.1-security",
+    "redux": "4.2.1",
+    "redux-devtools-extension": "2.13.9",
+    "redux-thunk": "2.4.2",
     "slick-carousel": "1.8.1",
     "styled-components": "6.0.0-rc.3"
   },
